# rinha-2023

./: Cargo.toml  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  nginx.conf
migrations/2025-11-27-175136-0000_create_function_array_to_string/: down.sql  up.sql
migrations/2025-11-27-175151-0000_create_people/: down.sql  up.sql
migrations/2025-11-27-175216-0000_create_gist/: down.sql  up.sql
src/: docs.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs
src/db/: mod.rs  potsgres_repository.rs
