[package]
name = "rinha-2023"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
diesel = { version = "2.3.4", features = ["uuid", "time", "postgres", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
dotenvy = "0.15.7"
scalar-doc = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["uuid", "time", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

